--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "newgrounds-ripper",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
+  "type": "commonjs",
   "dependencies": {
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
+    "axios": "^1.0.0",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   }
